--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -11,7 +11,7 @@ logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INF
 logging.level.reactor.netty.http.client=DEBUG
 
 spring.cloud.gateway.routes[0].id=currency-exchange-service
-spring.cloud.gateway.routes[0].uri=lb://currency-exchange
+spring.cloud.gateway.routes[0].uri=lb://currency-exchange-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/currency-exchange/**
 
 spring.cloud.gateway.routes[1].id=currency-conversion-service
