--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -8,3 +8,22 @@ server.port=8082
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
+eureka.client.fetch-registry=true
+
+## circuit breaker
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.health.circuitbreakers.enabled=true
+
+resilience4j.circuitbreaker.instances.myexchange.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.myexchange.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.myexchange.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.myexchange.wait-duration-in-open-state=5s
+resilience4j.circuitbreaker.instances.myexchange.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.myexchange.sliding-window-size=10
+resilience4j.circuitbreaker.instances.myexchange.sliding-window-type=count-based
+resilience4j.circuitbreaker.configs.default.registerHealthIndicator=true
+
+#Resilience4J Retry Properties
+resilience4j.retry.configs.default.max-attempts=3
+resilience4j.retry.configs.default.wait-duration=5s
