--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.sql.init.mode=always
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
+
+management.endpoints.web.exposure.include=*
