--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=api-gateway
 
 server.port=9095
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://host.docker.internal:8761/eureka
 eureka.instance.prefer-ip-address=true
 
 logging.level.org.springframework.cloud.gateway.handler.RoutePredicateHandlerMapping=TRACE
