--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8082
 
 #eureka.instance.prefer-ip-address=true
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://host.docker.internal:8761/eureka
 eureka.instance.prefer-ip-address=true
 eureka.client.fetch-registry=true
 
@@ -27,3 +27,11 @@ resilience4j.circuitbreaker.configs.default.registerHealthIndicator=true
 #Resilience4J Retry Properties
 resilience4j.retry.configs.default.max-attempts=3
 resilience4j.retry.configs.default.wait-duration=5s
+
+#Kafka Properties
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.template.default-topic=notificationTopic
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=event:com.revature.conversion.event.CurrencyEvent
+spring.kafka.producer.properties.spring.json.trusted.packages=*
