--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 spring.application.name=currency-exchange-service
 server.port=8081
 
-spring.datasource.url=jdbc:mysql://localhost:3306/sp-currency
+#spring.datasource.url=jdbc:mysql://localhost:3306/sp-currency
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/sp-currency
 spring.datasource.username=root
 spring.datasource.password=admin@123
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
@@ -15,7 +17,7 @@ spring.sql.init.mode=always
 
 #eureka.instance.prefer-ip-address=true
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://host.docker.internal:8761/eureka
 eureka.instance.prefer-ip-address=true
 
 management.endpoints.web.exposure.include=*
